--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@ CLIENT_ID=7278786786786
 CLIENT_SECRET=DAWdwad-wadwadWADwad
 URL=http://localhost:3030
 ID_WH=481899991991
-TOKEN_WH=AWEWAE#ER#-adadw9dawdWADd-aWDwadaddddaaa
+TOKEN_WH=AWEWAEWERs-adsw9dawdWADd-aWDwadaddddaaa
+TOKEN_BOT=MZasdasdCasfASFafwfafaafaf.MAsdasdwwwwaaAAw
+ID_CHANNEL=781263477443395585
