--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mychat",
   "version": "1.0.0",
-  "description": "",
+  "description": "MyChat es una aplicación de mensajería en tiempo real con servidores de Discord (similar a un canal de Discord).",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": "CraterMaik",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "discord-markdown": "^2.4.1",
