--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ TOKEN_WH=AWEWAEWERs-adsw9dawdWADd-aWDwadaddddaaa
 TOKEN_BOT=MZasdasdCasfASFafwfafaafaf.MAsdasdwwwwaaAAw
 ID_CHANNEL=709260342345233782
 ID_CHANNEL_LOG=723708264960753864
+PORT=3000
