--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": "12.x",
+    "node": ">=12.x",
     "npm": "*"
   },
   "keywords": [],
